# OrbisEngine

./: .gitmodules  CMakeLists.txt  README.md  cspell.json
include/: geni.h  orbis.h
include/core/: Application.h  Common.h  Engine.h
include/graphics/: GraphicsAPI.h  ShaderProgram.h  Texture.h  VertexLayout.h
include/input/: InputManager.h
include/io/: FileSystem.h
include/orbis/: Application.h  Engine.h
include/render/: Material.h  Mesh.h  RenderQueue.h
include/scene/: Component.h  GameObject.h  Scene.h
include/scene/components/: CameraComponent.h  MeshComponent.h  PlayerControllerComponent.h
src/: Application.cpp  Engine.cpp
src/core/: Application.cpp  Engine.cpp
src/graphics/: GraphicsAPI.cpp  ShaderProgram.cpp  Texture.cpp
src/input/: InputManager.cpp
src/io/: FileSystem.cpp
src/render/: Material.cpp  Mesh.cpp  RenderQueue.cpp
src/scene/: Component.cpp  GameObject.cpp  Scene.cpp
src/scene/components/: CameraComponent.cpp  MeshComponent.cpp  PlayerControllerComponent.cpp
